optional fields in signup now wired up correctly. pokedex no longer fetches over and over. css fixed on pokedex so text doesnt bleed over onto the pokedex image

--- a/src/components/Pokedex/PokedexView.css
+++ b/src/components/Pokedex/PokedexView.css
@@ -47,5 +47,5 @@
 
 #trainerInfo {
   position: absolute;
-  font-size: 30px;
+  font-size: 22px;
 }
